--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
 	<name>bus-route-eta</name>
 	<description>Simple program that, when given a route, bus stop name, and direction, will give the ETA of the next bus. </description>
 
+	<packaging>jar</packaging>
+
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
