--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,15 @@
 			<version>1.1-groovy-2.4-rc-2</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.9.8</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -63,7 +72,7 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
+				<version>3.5.1</version>
 				<configuration>
 					<compilerId>groovy-eclipse-compiler</compilerId>
 					<useIncrementalCompilation>false</useIncrementalCompilation>
